jar bug fix