@@ -1,18 +1,15 @@
 package bankDataReader.commands;
 
 
-import bankDataReader.currencyParser.views.Settings;
 import org.telegram.telegrambots.extensions.bots.commandbot.commands.BotCommand;
 import org.telegram.telegrambots.meta.api.methods.send.SendMessage;
 import org.telegram.telegrambots.meta.api.objects.Chat;
 import org.telegram.telegrambots.meta.api.objects.User;
-import org.telegram.telegrambots.meta.api.objects.replykeyboard.InlineKeyboardMarkup;
-import org.telegram.telegrambots.meta.api.objects.replykeyboard.buttons.InlineKeyboardButton;
+import org.telegram.telegrambots.meta.api.objects.replykeyboard.ReplyKeyboardMarkup;
+import org.telegram.telegrambots.meta.api.objects.replykeyboard.buttons.KeyboardRow;
 import org.telegram.telegrambots.meta.bots.AbsSender;
 import org.telegram.telegrambots.meta.exceptions.TelegramApiException;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 public class Command extends BotCommand {
@@ -28,33 +25,20 @@ public class Command extends BotCommand {
         sendMessage.setText(firstMsg);
         sendMessage.setChatId(chat.getId());
 
-        InlineKeyboardButton info = InlineKeyboardButton.builder().text("Отримати інфо").callbackData("Отримати інфо").build();
-        InlineKeyboardButton settings = InlineKeyboardButton.builder().text("Налаштування").callbackData("Налаштування").build();
+        KeyboardRow row = new KeyboardRow();
+        row.add("Отримати інфо");
+        KeyboardRow row2 = new KeyboardRow();
+        row2.add("Налаштування");
 
-        InlineKeyboardMarkup inlineKeyboardMarkup = InlineKeyboardMarkup.builder().keyboard(Collections.singletonList(Arrays.asList(info, settings))).build();
-        sendMessage.setReplyMarkup(inlineKeyboardMarkup);
+        sendMessage.setReplyMarkup(new ReplyKeyboardMarkup(List.of(row, row2)));
 
         try {
             absSender.execute(sendMessage);
         } catch (TelegramApiException e) {
-            e.printStackTrace();
+            e.printStackTrace(System.out);
             System.out.println("Something wrong :(");
         }
 
-//        String buttonTextInfo = inlineKeyboardMarkup.getKeyboard().get(0).get(0).getText(); // "Отримати інфо"
-//        String buttonTextSettings = inlineKeyboardMarkup.getKeyboard().get(0).get(1).getText(); // "Налаштування"
-
-        List<List<InlineKeyboardButton>> keyboard = inlineKeyboardMarkup.getKeyboard();
-        if (!keyboard.isEmpty() && keyboard.get(0).size() == 2) {
-            String buttonTextInfo = keyboard.get(0).get(0).getText();
-            String buttonTextSettings = keyboard.get(0).get(1).getText();
-
-            if ("Отримати інфо".equals(buttonTextInfo)) {
-//                Info.getInfoMethod(absSender, chat);
-            } else if ("Налаштування".equals(buttonTextSettings)) {
-                Settings.displaySettingsMethod(absSender, chat);
-            }
-        }
     }
 }
 
